--- a/festival.html
+++ b/festival.html
@@ -110,7 +110,19 @@
             uk-slideshow-item="previous"></a>
          <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
             uk-slideshow-item="next"></a>
-
+            <div class="uk-position-top uk-light uk-margin-large-top">
+               <ul class="uk-navbar-nav uk-flex-center height-none" uk-scrollspy-nav="closest: li; scroll: true; offset: 0">
+                  <li class="uk-active">
+                     <a href="#">HAKKINDA</a>
+                  </li>
+                  <li class="uk-active">
+                     <a href="#">PROGRAM</a>
+                  </li>
+                  <li class="uk-active">
+                     <a href="#">BASIN KİTİ</a>
+                  </li>
+               </ul>
+            </div>
       </div>
    </main>
    <section class="uk-section uk-section-muted uk-background-widt-1-1 uk-background-top-center uk-background-norepeat"
@@ -150,8 +162,7 @@
             </p>
          </div>
          <div class="uk-margin-medium-top">
-            <div
-               class="uk-grid uk-grid-medium uk-grid-divider uk-child-width-auto uk-flex-center uk-margin-small-bottom ">
+            <div class="uk-grid uk-grid-medium uk-grid-divider uk-child-width-auto uk-flex-center uk-margin-small-bottom ">
                <div class="uk-margin-medium-top">
                   <img src="AKRA LOGO.png" alt="">
                </div>
@@ -160,6 +171,7 @@
                </div>
             </div>
          </div>
+      </div>
    </section>
    <div class="uk-section section-restaurant">
       <div class="uk-container">
