--- a/festival.html
+++ b/festival.html
@@ -21,10 +21,10 @@
                </a>
                <ul class="uk-navbar-nav uk-margin-auto uk-visible@1">
                   <li>
-                     <a href="">FESTİVAL</a>
+                     <a href="festival.html">FESTİVAL</a>
                   </li>
                   <li>
-                     <a href="">RESTORANLAR</a>
+                     <a href="katilimcilar.html">RESTORANLAR</a>
                   </li>
                   <li>
                      <a href="">MEZELER</a>
@@ -33,7 +33,7 @@
                      <a href="">KONAKLAMA</a>
                   </li>
                   <li class="uk-hover">
-                     <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali">BİLET AL</a>
+                     <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali" target="_blank">BİLET AL</a>
                   </li>
                </ul>
             </div>
@@ -246,8 +246,8 @@
    </div>
    <div class="uk-margin-medium-top uk-section-program"></div>
    <div class="uk-margin-medium-top uk-text-center uk-padding">
-      <h1 class="uk-margin-small-bottom">PROGRAM</h1>
-      <p class="uk-margin-small" id="paragraf">Meze Festivali, gastronomi tutkunlarını 15 Ekim Cumartesi günü saat
+      <h1 class="uk-margin-small-bottom uk-text-bold" id="program">PROGRAM</h1>
+      <p class="uk-margin-small uk-text-large" id="paragraf">Meze Festivali, gastronomi tutkunlarını 15 Ekim Cumartesi günü saat
          20.00-24.00 arasında, Akra Hotels’de<br> bir araya getirecek.</p>
    </div>
    <div class="uk-text-center uk-padding">
