--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
    <link href="https://fonts.googleapis.com/css2?family=BenchNine:wght@300;400;700&display=swap" rel="stylesheet">
    <title>Document</title>
 </head>
-
 <body>
    <header>
       <div class="uk-container">
@@ -21,7 +19,7 @@
                </a>
                <ul class="uk-navbar-nav uk-margin-auto uk-visible@1">
                   <li>
-                     <a href="festival.html ">FESTİVAL</a>
+                     <a href="festival.html">FESTİVAL</a>
                   </li>
                   <li>
                      <a href="katilimcilar.html">RESTORANLAR</a>
@@ -88,64 +86,7 @@
       </div>
 
    </header>
-   <main>
-      <div class="uk-slideshow uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slideshow="min-height: 300; max-height: 724; animation: slide">
-
-         <ul class="uk-slideshow-items" style="min-height: 724px;">
-            <li tabindex="-1" class="uk-active uk-transition-active" style="transform: translated(0px, 0px, 0px);">
-               <a href="https://www.youtube.com/watch?v=xWfYqxDPi5Q&list=RDxWfYqxDPi5Q&start_radio=1" target="">
-               <img src="FULLBLOCK (1).png" alt="" uk-cover style="height: 877px; width: 2032px;">
-            </a>
-            </li>
-            <li>
-               <img src="FULLBLOCK (1).png" alt="" uk-cover style="height: 877px; width: 2032px;">
-            </li>
-            <li>
-               <img src="FULLBLOCK (1).png" alt="" uk-cover style="height: 877px; width: 2032px;">
-            </li>
-         </ul>
-
-         <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
-            uk-slideshow-item="previous"></a>
-         <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
-            uk-slideshow-item="next"></a>
-      </div>
-   </main>
-   <section class="uk-section uk-section-muted uk-background-widt-1-1 uk-background-top-center uk-background-norepeat"
-      style="background: #E6E6DB" id="test3">
-      <div class="uk-container uk-text-center">
-         <div class="uk-grid uk-grid-medium uk-grid-divider uk-child-width-auto uk-flex-center uk-margin-small-bottom">
-            <div>
-               <img src="AKRA LOGO.png" alt="">
-            </div>
-            <div>
-               <a href="">
-               <img src="AKRA LOGO.png" alt="">
-               2</a>
-            </div>
-         </div>
-         <div class="uk-margin-medium-top" id="test">
-            <h1 class="uk-margin-small-bottom">4. ULUSLARASI MEZE FESTİVALİ GELİYOR!
-            </h1>
-            <h2 class="uk-margin-small">Enfes Lezzetlerin Şölenine Hazır Mısınız?</h2>
-         </div>
-
-         <div class="uk-margin-remove-last-child uk-margin-medium-bottom uk-text-large uk-text-light uk-text-center">
-            <p class="x_MsoNormal">
-               Gastronomi dünyasının saygın işletmelerini bir araya getiren 3. Uluslararası Meze Festivali, Yoğun ilgi
-               gören ilk iki senesinin ardından gastronomi meraklıları ile birlikte 18 Ekim 2019 Cuma günü bir kez daha
-               Antalya, Akra’da bir araya geldi. Akra Hotels tarafından düzenlenen festival, Türkiye’nin en geniş
-               kapsamlı meze festivali olma özelliğini taşıyor. Festival; Antalya’dan Kaş’a, İstanbul, Ankara ve
-               Urla’dan Ordu’ya kadar uzanan geniş bir yelpazeye sahip gastronomi dünyasının saygın işletmelerine ait
-               birbirinden güzel lezzetleri, meze severlerin beğenisine sundu. Yurtiçinde öne çıkan birçok mekanın
-               yanında yurtdışından da işletmeler festivalde yerini aldı. Festival aradan geçen uzun sürenin ardından
-               2022’de tekrar sizlerle birlikte!
-            </p>
-            <a href="" class="uk-button uk-button-secondary uk-button-large uk-hover" target="_blank">BİLET AL</a>
-         </div>
-      </div>
-   </section>
-   <div class="uk-section section-restaurant">
+   <main class="uk-section section-restaurant">
       <div class="uk-container">
          <div class="uk-text-center uk-text-large uk-text-light">
             <h1>KATILIMCILAR</h1>
@@ -285,7 +226,7 @@
             </div>
          </div>
       </div>
-   </div>
+   </main>
    <footer>
       <section class="uk-section footer-top">
          <div class="uk-container">
@@ -402,13 +343,11 @@
          </div>
       </section>
    </footer>
-
-
+   
 
 
 
    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit-icons.min.js"></script>
 </body>
-
 </html>
