--- a/festival.html
+++ b/festival.html
@@ -251,7 +251,7 @@
          20.00-24.00 arasında, Akra Hotels’de<br> bir araya getirecek.</p>
    </div>
    <div class="uk-text-center uk-padding">
-      <a href="#" class="uk-button uk-button large uk-hover" id="button">BİLET ALMAK İÇİN TIKLAYINIZ</a>
+      <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali" target="_blank" class="uk-button uk-button large uk-hover" id="button">BİLET ALMAK İÇİN TIKLAYINIZ</a>
    </div>
    <footer>
       <section class="uk-section footer-top">
