--- a/katilimcilar.html
+++ b/katilimcilar.html
@@ -28,7 +28,7 @@
                      <a href="">MEZELER</a>
                   </li>
                   <li>
-                     <a href="">KONAKLAMA</a>
+                     <a href="https://www.akrahotels.com/tr/konaklama/" target="_blank">KONAKLAMA</a>
                   </li>
                   <li class="uk-hover">
                      <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali" target="_blank">BİLET AL</a>
@@ -157,6 +157,7 @@
                      class="uk-flex uk-flex-center uk-flex-middle uk-transition-toggle uk-inline-clip item uk-animation-slide-right"
                      tabindex="0">
                      <img src="akra-meze-festivali-2022-7-mehmet.png" alt="">
+                     <span>KATILIMCIYA GİT</span>
                   </a>
                </div>
                <div>
@@ -217,9 +218,10 @@
                </div>
                <div>
                   <a id="test1" href="#"
-                     class="uk-flex uk-flex-center uk-flex-middle uk-transition-toggle uk-inline-clip item uk-animation-slide-left"
+                     class="uk-flex uk-flex-center uk-flex-middle item uk-animation-slide-left"
                      tabindex="0">
                      <img src="akra-meze-festivali-2022-7-mehmet.png" alt="">
+                      <span>KATILIMCIYA GİT</span>
                   </a>
                </div>
 
@@ -269,7 +271,7 @@
                            <a href="#">İLETİŞİM</a>
                         </li>
                         <li id="biletal">
-                           <a href="#">BİLET AL</a>
+                           <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali" target="_blank">BİLET AL</a>
                         </li>
                      </ul>
                   </div>
