--- a/mezefestivali.html
+++ b/mezefestivali.html
@@ -30,7 +30,7 @@
                      <a href="">MEZELER</a>
                   </li>
                   <li>
-                     <a href="">KONAKLAMA</a>
+                     <a href="https://www.akrahotels.com/tr/konaklama/">KONAKLAMA</a>
                   </li>
                   <li class="uk-hover">
                      <a href="https://www.biletix.com/etkinlik/1C312/TURKIYE/tr?utm_source=mezefestivali" target="_blank">BİLET AL</a>
@@ -121,7 +121,7 @@
             <div>
                <a href="">
                <img src="AKRA LOGO.png" alt="">
-               2</a>
+               </a>
             </div>
          </div>
          <div class="uk-margin-medium-top" id="test">
